@@ -78,6 +78,8 @@ Library
 Tests
 -----
 
+- Output comparison tests are no longer supported.
+
 - Rewrite test_errno to use unittest and no longer be a no-op.
 
 - GHOP 234: Convert test_extcall to doctest.
